--- a/src/css/main.css
+++ b/src/css/main.css
@@ -91,14 +91,25 @@ table {
   background-color: rgb(248,236,207);
 }
 
+#death-pic.win {
+  width: 453px;
+  height: 284px;
+  background-image: url(assets/win/pic.png);
+  background-position: left;
+}
+
+#death-pic.win.hit {
+  background-position: right;
+}
+
 #game-over .static-container > * {
   display: block;
   opacity: 0;
 }
 
 #gameover-subtitle {
-  width: 90%;
-  font-size: 1.8em;
+  width: 96%;
+  font-size: 1.6em;
   font-weight: bold;
   text-align: center;
   line-height: 1.6em;
@@ -108,6 +119,19 @@ table {
   width: 90%;
   font-size: 1.4em;
   line-height: 1.4em;
+}
+
+#game-missed {
+  font-weight: bold;
+  text-align: center;
+  padding: 0.5em 1em;
+  font-size: 1.4em;
+  background-color: white;
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  border-radius: 0.5em; /* future proofing */
+  -khtml-border-radius: 0.5em; /* for old Konqueror browsers */
+  display: inline-block !important;
 }
 
 #info {
@@ -128,10 +152,10 @@ table {
 }
 
 #law p {
-  font-size: 1.6em;
+  font-size: 1.4em;
   margin: 1em;
   padding: 1em;
-  line-height: 2em;
+  line-height: 1.6em;
   -moz-border-radius: 1em;
   -webkit-border-radius: 1em;
   border-radius: 1em; /* future proofing */
@@ -139,8 +163,73 @@ table {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
+#overview .section {
+  background-color: #FFFEEE;
+  width: 530px;
+}
+
+#overview .section:after {
+  content:'';
+  display:block;
+  clear: both;
+}
+
+#overview .head {
+  width: 100%;
+  background-color: #231815;
+  font-size: 1.8em;
+  padding: 1em 0;
+  color: white;
+  text-align: center;
+}
+
+#overview .title {
+  float: left;
+  width: 175px;
+  padding: 0.5em;
+  background-color: #CD451D;
+  color: white;
+  font-size: 1.8em;
+  margin-top: 2.5em;
+  margin-left: 2em;
+  text-align: center;
+}
+
+#overview .death {
+  float: right;
+  font-size: 1.6em;
+  width: 50%;
+  text-align: center;
+}
+
+#overview div[data-stage="0"] .death {
+  float: none;
+  width: auto;
+}
+
+#overview div[data-stage="0"] .death > div {
+  width: 50%;
+  float: left;
+}
+
+#overview .death img {
+  margin-top: 1em;
+}
+
+#overview .name {
+  padding: 1em 0;
+}
+
+.info-foot {
+  width: 100%;
+  height: 1em;
+  background-color: #CD451D;
+}
+
 .btn {
   cursor: pointer;
+  text-align: center;
+  display: block;
 }
 
 .btn-again {
@@ -155,13 +244,24 @@ table {
 }
 
 .btn-share {
-  width: 511px;
-  height: 84px;
+  width: 505px;
+  height: 78px;
   background-image: url(assets/gameover/share.png);
   background-position: left;
 }
 
 .btn-share:hover, .btn-share:active {
+  background-position: right;
+}
+
+.btn-more {
+  width: 536px;
+  height: 81px;
+  background-image: url(assets/overview/more.png);
+  background-position: left;
+}
+
+.btn-more:hover, .btn-more:active {
   background-position: right;
 }
 
@@ -171,4 +271,8 @@ table {
 
 .margin-medium {
   margin: 1em auto;
+}
+
+.margin-large {
+  margin: 2em auto;
 }
