--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1077,6 +1077,10 @@ body.bg-pale {
   left: -100%;
 }
 
+#gameover-static {
+  padding-top: 0.5em;
+}
+
 #gameover-static > * {
   display: block;
   opacity: 0;
